checked links, apply now, request call back button, mobile responsive

--- a/rate.html
+++ b/rate.html
@@ -37,7 +37,7 @@
             <!-- Nav Links -->
             <li><a href="https://jrworkflows.github.io/Project1/checklist.html">Loan Checklist</a></li>
             <li><a href="https://jrworkflows.github.io/Project1/rate.html">Find My Rate</a></li>
-            <li><a href="https://jrworkflows.github.io/Project1/myneighborhood/index.html">Find My Neighborhood</a></li>
+            <li><a href="https://jrworkflows.github.io/Project1/explore.html">Find My Neighborhood</a></li>
                         </ul>
             <!-- Mobile Nav Links -->
                         <ul id="nav-mobile" class="sidenav">
@@ -49,48 +49,17 @@
                     </div>
                 </nav>
 
-    <div class="headerDiv">
-        <h1>The Real Deal Estate: Zach</h1>
-    </div>
+   
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 
-    <div class="navDiv">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+    
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="https://jrworkflows.github.io/Project1/">Home
-                            <span class="sr-only">(current)</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="checklist.html">Home Loan Checklist</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="neighborhood.html">Find Your Neighborhood</a>
-
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="rate.html">Find Your Rate</a>
-                    </li>
-                </ul>
-                <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                </form>
-            </div>
-        </nav>
-    </div>
-
-    <div class="contentDiv">
+    <div class="container">
+            <div class="headerDiv">
+                    <h1>The Real Deal Estate: Zach</h1>
+                </div>
 
         <div id="zillow"> THIS IS WHERE WE WILL PULL DATA FROM ZILLOW API TO DISPLAY RATE DATA</div>
 
@@ -107,7 +76,10 @@
                 <label for="formGroupExampleInput3"></label>
                 <input type="text" class="form-control" id="input-phone" placeholder="(555) 555-5555">
             </div>
-            <button class="btn btn-primary float-right" type="button" id="add-train-btn">Submit</button>
+            <button class="btn btn-primary" type="button" id="add-train-btn">Submit</button>
+            <br>
+            <br>
+            
 
         </form>
     </div>
