adding checklist with styling and other stuff

--- a/checklist.html
+++ b/checklist.html
@@ -38,8 +38,28 @@
             <a href="index.html" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         </div>
     </nav>
-    <h1>Checklist</h1>
-    <ul>Get Money</ul>
+    <div class="container">
+        <br>
+    <div id="checklist">
+    <h1 id = "checklist-header">Mortgage Checklist</h1>
+    <br>
+    <ol>
+        <li>Interview your potential loan officer - not all relationships are created equal. During this process you will get really personal with your LO, so making sure he or she is the right fit is essential to a smooth transaction.  Your loan officer will then take your application for a mortgage.  After application you will receive initial disclosures that will include your application and a Loan Estimate. This is just an estimate based on your initial conversation with your LO.</li>
+        <br>
+        <li>Be ready to do a little work - the loan officer will be requesting documents from you.  This is where you have to do your part and get those documents requested to your loan officer as quickly as possible in order for your LO to start doing his job. These documents are not optional. They are needed in order to attempt to get you qualified for a mortgage.</li>
+        <br>
+        <li>Pre-approval - once you've provided the documents your LO submits the file to underwriting. The underwriter is the gate keeper.  They are the ones who give the final yes or no. Once the underwriter gives a conditional pre-approval (in which they may request more documentation. Refer to step 2.), it's time for the fun part....</li>
+        <br>
+        <li>Go shopping - as with your LO, interview a few realtors who could possibly represent you. You and your realtor can now officially go shopping for your house with a fully underwritten pre-approval letter in hand.</li>
+        <br>
+        <li>Get into contract - once you find the house of your dreams and get into contract the LO comes back into the picture. With the purchase contract in hand your LO can now resubmit your file for final approval.</li>
+        <br>
+        <li>Clear to close- once your LO gets the final approval you receive a Closing Disclosure that outlines everything about your loan including monthly payment, fees and other loan related information. Once that is signed the 3-day waiting period begins.</li>
+        <br>
+        <li> The American Dream - once the mandatory three day waiting period has passed you can now sign the final loan documents which happens live and in person. Once the final docs are signed and your county records you will receive the keys to your new house. </li>
+    </ol>   
+</div>
+</div>
 
     <!-- Footer -->
     <footer class="page-footer teal">
