--- a/rate.html
+++ b/rate.html
@@ -70,13 +70,14 @@
             </div>
             <div class="form-group"> Email Address
                 <label for="formGroupExampleInput2">Name</label>
-                <input type="text" class="form-control" id="input-email" placeholder="JoeSmith@gmail.com">
+                <input type="email" class="form-control" id="input-email" placeholder="JoeSmith@gmail.com">
             </div>
             <div class="form-group"> Phone Number
                 <label for="formGroupExampleInput3"></label>
-                <input type="text" class="form-control" id="input-phone" placeholder="(555) 555-5555">
+                <input type="number" class="form-control" id="input-phone" placeholder="(555) 555-5555">
             </div>
             <button class="btn btn-primary" type="button" id="submit-btn">Submit</button>
+
             <br>
             <br>
             
