--- a/rate.html
+++ b/rate.html
@@ -62,7 +62,7 @@
                 </div>
 <!-- Skype -->
         <div id="skype">
-            <p>Include best contact time. Flexiable availabilty!</p>
+            <p>Include best contact time. Flexible availability!</p>
 <!-- Skype BOT Bubble -->
             <span class="skype-button bubble "></span>
             <script src="https://swc.cdn.skype.com/sdk/v1/sdk.min.js"></script>
@@ -79,20 +79,20 @@
 
 
 <!-- Form -->
-        <form>
+        <form id = "customer-form">
             <div class="form-group">
                 <label for="formGroupExampleInput">Name</label>
-                <input type="text" class="form-control" id="input-name" placeholder="Joe Smith">
+                <input type="text" class="form-control" id="input-name" placeholder="Joe Smith" required/>
             </div>
             <div class="form-group"> Email Address
                 <label for="formGroupExampleInput2">Name</label>
-                <input type="email" class="form-control" id="input-email" placeholder="JoeSmith@gmail.com">
+                <input type="email" class="form-control" id="input-email" placeholder="JoeSmith@gmail.com" required/>
             </div>
-            <div class="form-group"> Phone Number
+            <div class="form-group"> Phone Number 
                 <label for="formGroupExampleInput3"></label>
-                <input type="number" class="form-control" id="input-phone" placeholder="(555) 555-5555">
+                <input type="tel" class="form-control" id="input-phone" placeholder="(555) 555-5555" required = "required"/>
             </div>
-            <button class="btn btn-primary" type="button" id="submit-btn">Submit</button>
+            <button class="btn btn-primary" type="submit" id="submit-btn">Submit</button>
 
             <br>
             <br>
