--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 <h5 class="white-text">Branch Locations</h5>
                 <ul>
                     <li>
-                        <a class="white-text" href="https://mortgagesolutions.net/branches-locations/">Seach near me</a>
+                        <a class="white-text" href="https://mortgagesolutions.net/branches-locations/">Search near me</a>
                     </li>
                 </ul>
             </div>
@@ -168,13 +168,20 @@
     </footer>
     </div>
 
-    <!-- trying to make a img a hypherlink linkedin -->
-    <script>
-        $(document).ready(function () {
-            $('linkedin').click(function () {
-                window.location.href = this.id + 'https://www.linkedin.com/in/zach-malgieri-a9961a61/';
-            });
-        });
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript">
+
+         // Example queryURL for Giphy API
+    var queryURL = "HELLO";
+
+$(document).ready(function(){
+$.ajax({ url: "database/update.html",
+        context: document.body,
+        success: function(){
+           alert("done");
+        }});
+});
+
     </script>
 
     <!--  Scripts-->
