adding gif and typos

--- a/giphy.html
+++ b/giphy.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Favorite Movies</title>
+  <title>House Gif</title>
   <style type="text/css">
     button,
     div,
@@ -18,28 +18,33 @@
 <!-- Giphy btn -->
 
     <button id="loan-btn">CLICK ME</button>
-   <div id="images">
+   <div id="loan-images">
   </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript">
 
-      // Event listener for our cat-button
+      // Event listener for our house-button
     $("#loan-btn").on("click", function() {
 
-      let houseImg = $(this).attr("loan-btn");
+      let houseImg = $(this).attr("id");
 
-      let queryURL = "https://api.giphy.com/v1/gifs/search?q=" + houseImg + "&api_key=dc6zaTOxFJmzC&limit=10";
+
+      let queryURL = "https://api.giphy.com/v1/gifs/gQOZBeDohaDkc?api_key=dc6zaTOxFJmzC&limit=10";
       //ajax GET request
+      console.log(houseImg)
+
+        
         $.ajax({
             url: queryURL,
             method: "GET"
         })
+        
         // after data comes back
         .then(function(response) {
 
          // Saving the image_original_url property
-          var imageUrl = response.data.image_original_url;
+         var imageUrl = response.data.images.fixed_width.url
 
           // Creating and storing an image tag
            let loanImg = $("<img>");
