--- a/rate.html
+++ b/rate.html
@@ -128,7 +128,7 @@
                             <h5 class="white-text">Branch Locations</h5>
                             <ul>
                                 <li>
-                                    <a class="white-text" href="https://mortgagesolutions.net/branches-locations/">Seach near me</a>
+                                    <a class="white-text" href="https://mortgagesolutions.net/branches-locations/">Search near me</a>
                                 </li>
                         </ul>
                     </div>
