typos and Contact

--- a/checklist.html
+++ b/checklist.html
@@ -26,13 +26,13 @@
             <ul class="right hide-on-med-and-down">
                 <!-- Nav Links -->
                 <li><a href="https://jrworkflows.github.io/Project1/checklist.html">Loan Checklist</a></li>
-                <li><a href="https://jrworkflows.github.io/Project1/rate.html">Find My Rate</a></li>
+                <li><a href="https://jrworkflows.github.io/Project1/rate.html">Contact</a></li>
                 <li><a href="https://jrworkflows.github.io/Project1/explore.html">Explore my Community</a></li>
             </ul>
             <!-- Mobile Nav Links -->
             <ul id="nav-mobile" class="sidenav">
                 <li><a href="https://jrworkflows.github.io/Project1/checklist.html">Loan Checklist</a></li>
-                <li><a href="https://jrworkflows.github.io/Project1/rate.html">Find My Rate</a></li>
+                <li><a href="https://jrworkflows.github.io/Project1/rate.html">Contact</a></li>
                 <li><a href="https://jrworkflows.github.io/Project1/explore.html">Explore my Community</a></li>
             </ul>
             <a href="index.html" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
