--- a/explore.html
+++ b/explore.html
@@ -36,13 +36,13 @@
             <ul class="right hide-on-med-and-down">
                 <!-- Nav Links -->
                 <li><a href="https://jrworkflows.github.io/Project1/checklist.html">Loan Checklist</a></li>
-                <li><a href="https://jrworkflows.github.io/Project1/rate.html">Find My Rate</a></li>
+                <li><a href="https://jrworkflows.github.io/Project1/rate.html">Contact</a></li>
                 <li><a href="https://jrworkflows.github.io/Project1/explore.html">Explore my Community</a></li>
             </ul>
 
             <ul id="nav-mobile" class="sidenav">
                 <li><a href="https://jrworkflows.github.io/Project1/checklist.html">Loan Checklist</a></li>
-                <li><a href="https://jrworkflows.github.io/Project1/rate.html">Find My Rate</a></li>
+                <li><a href="https://jrworkflows.github.io/Project1/rate.html">Contact</a></li>
                 <li><a href="https://jrworkflows.github.io/Project1/explore.html">Explore my Community</a></li>
             </ul>
             <a href="index.html" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
@@ -113,7 +113,7 @@
                 <h5 class="white-text">Branch Locations</h5>
                 <ul>
                     <li>
-                        <a class="white-text" href="https://mortgagesolutions.net/branches-locations/">Seach near me</a>
+                        <a class="white-text" href="https://mortgagesolutions.net/branches-locations/">Search near me</a>
                     </li>
                     </ul>
                 </div>
