--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <a href="https://jrworkflows.github.io/Project1/checklist.html">Loan Checklist</a>
                 </li>
                 <li>
-                    <a href="https://jrworkflows.github.io/Project1/rate.html">Find My Rate</a>
+                    <a href="https://jrworkflows.github.io/Project1/rate.html">Contact</a>
                 </li>
                 <li>
                     <a href="https://jrworkflows.github.io/Project1/explore.html">Explore my Community</a>
