location shrunk links

--- a/explore.html
+++ b/explore.html
@@ -99,8 +99,19 @@
             <div class="row">
                 <div class="col l6 s12">
                     <h5 class="white-text">Company Bio</h5>
-                    <p class="grey-text text-lighten-4">Zach is a Senior Financial Loan Officer with years of experience in his position. If you are looking for friendly personal service do not hesitate to reach Mr. Malgieri.</p>
-                </div>
+                    <p class="grey-text text-lighten-4"> <div class="row">
+                        <div class="col l6 s12">
+                            <h5 class="white-text">Company Bio</h5>
+                            <p class="grey-text text-lighten-4">
+                                Zach Malgieri NMLS #1311085
+                                <br>
+                                81 Blue Ravine Rd (1.77 mi)
+                                Folsom, California 95630
+                                <br>
+                                (707) 365-5343
+                            </p>
+                        </div>
+                        <div class="col l3 s12"> </div>
                 <div class="col l3 s12">
                     <h5 class="white-text">My Employer</h5>
                 <ul>
