--- a/rate.html
+++ b/rate.html
@@ -113,9 +113,19 @@
 <!-- Footer -->
                      <footer class="page-footer teal">
 <!-- Container for Company Bio and links -->
-                <div class="container">
-                    <div class="row">
-                        <div class="col l6 s12">
+<div class="row">
+    <div class="col l6 s12">
+        <h5 class="white-text">Company Bio</h5>
+        <p class="grey-text text-lighten-4">
+            Zach Malgieri NMLS #1311085
+            <br>
+            81 Blue Ravine Rd (1.77 mi)
+            Folsom, California 95630
+            <br>
+            (707) 365-5343
+        </p>
+    </div>
+    <div class="col l3 s12">
                             <h5 class="white-text">My Employer</h5>
                             <ul>
                                 <li>
