fixed footer container

--- a/checklist.html
+++ b/checklist.html
@@ -22,68 +22,93 @@
     <!-- left size Z logo -->
     <nav class="white" role="navigation">
         <div class="nav-wrapper container">
-            <a id="logo-container" href="https://jrworkflows.github.io/Project1/" class="brand-logo"><img src="https://github.com/JRworkflows/Project1/blob/master/images/logocirc.JPG?raw=true" width=60 height=60></a>
+            <a id="logo-container" href="https://jrworkflows.github.io/Project1/" class="brand-logo">
+                <img src="https://github.com/JRworkflows/Project1/blob/master/images/logocirc.JPG?raw=true" width=60 height=60>
+            </a>
             <ul class="right hide-on-med-and-down">
                 <!-- Nav Links -->
-                <li><a href="https://jrworkflows.github.io/Project1/checklist.html">Loan Checklist</a></li>
-                <li><a href="https://jrworkflows.github.io/Project1/rate.html">Contact</a></li>
-                <li><a href="https://jrworkflows.github.io/Project1/explore.html">Explore my Community</a></li>
+                <li>
+                    <a href="https://jrworkflows.github.io/Project1/checklist.html">Loan Checklist</a>
+                </li>
+                <li>
+                    <a href="https://jrworkflows.github.io/Project1/rate.html">Contact</a>
+                </li>
+                <li>
+                    <a href="https://jrworkflows.github.io/Project1/explore.html">Explore my Community</a>
+                </li>
             </ul>
             <!-- Mobile Nav Links -->
             <ul id="nav-mobile" class="sidenav">
-                <li><a href="https://jrworkflows.github.io/Project1/checklist.html">Loan Checklist</a></li>
-                <li><a href="https://jrworkflows.github.io/Project1/rate.html">Contact</a></li>
-                <li><a href="https://jrworkflows.github.io/Project1/explore.html">Explore my Community</a></li>
+                <li>
+                    <a href="https://jrworkflows.github.io/Project1/checklist.html">Loan Checklist</a>
+                </li>
+                <li>
+                    <a href="https://jrworkflows.github.io/Project1/rate.html">Contact</a>
+                </li>
+                <li>
+                    <a href="https://jrworkflows.github.io/Project1/explore.html">Explore my Community</a>
+                </li>
             </ul>
-            <a href="index.html" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+            <a href="index.html" data-target="nav-mobile" class="sidenav-trigger">
+                <i class="material-icons">menu</i>
+            </a>
         </div>
     </nav>
     <div class="container">
         <br>
-    <div id="checklist">
-    <h1 id = "checklist-header">Mortgage Checklist</h1>
-    <br>
-    <ol>
-        <li>Interview your potential loan officer - not all relationships are created equal. During this process you will get really personal with your LO, so making sure he or she is the right fit is essential to a smooth transaction.  Your loan officer will then take your application for a mortgage.  After application you will receive initial disclosures that will include your application and a Loan Estimate. This is just an estimate based on your initial conversation with your LO.</li>
-        <br>
-        <li>Be ready to do a little work - the loan officer will be requesting documents from you.  This is where you have to do your part and get those documents requested to your loan officer as quickly as possible in order for your LO to start doing his job. These documents are not optional. They are needed in order to attempt to get you qualified for a mortgage.</li>
-        <br>
-        <li>Pre-approval - once you've provided the documents your LO submits the file to underwriting. The underwriter is the gate keeper.  They are the ones who give the final yes or no. Once the underwriter gives a conditional pre-approval (in which they may request more documentation. Refer to step 2.), it's time for the fun part....</li>
-        <br>
-        <li>Go shopping - as with your LO, interview a few realtors who could possibly represent you. You and your realtor can now officially go shopping for your house with a fully underwritten pre-approval letter in hand.</li>
-        <br>
-        <li>Get into contract - once you find the house of your dreams and get into contract the LO comes back into the picture. With the purchase contract in hand your LO can now resubmit your file for final approval.</li>
-        <br>
-        <li>Clear to close- once your LO gets the final approval you receive a Closing Disclosure that outlines everything about your loan including monthly payment, fees and other loan related information. Once that is signed the 3-day waiting period begins.</li>
-        <br>
-        <li> The American Dream - once the mandatory three day waiting period has passed you can now sign the final loan documents which happens live and in person. Once the final docs are signed and your county records you will receive the keys to your new house. </li>
-    </ol>   
-</div>
-</div>
+        <div id="checklist">
+            <h1 id="checklist-header">Mortgage Checklist</h1>
+            <br>
+            <ol>
+                <li>Interview your potential loan officer - not all relationships are created equal. During this process you
+                    will get really personal with your LO, so making sure he or she is the right fit is essential to a smooth
+                    transaction. Your loan officer will then take your application for a mortgage. After application you
+                    will receive initial disclosures that will include your application and a Loan Estimate. This is just
+                    an estimate based on your initial conversation with your LO.</li>
+                <br>
+                <li>Be ready to do a little work - the loan officer will be requesting documents from you. This is where you
+                    have to do your part and get those documents requested to your loan officer as quickly as possible in
+                    order for your LO to start doing his job. These documents are not optional. They are needed in order
+                    to attempt to get you qualified for a mortgage.</li>
+                <br>
+                <li>Pre-approval - once you've provided the documents your LO submits the file to underwriting. The underwriter
+                    is the gate keeper. They are the ones who give the final yes or no. Once the underwriter gives a conditional
+                    pre-approval (in which they may request more documentation. Refer to step 2.), it's time for the fun
+                    part....
+                </li>
+                <br>
+                <li>Go shopping - as with your LO, interview a few realtors who could possibly represent you. You and your realtor
+                    can now officially go shopping for your house with a fully underwritten pre-approval letter in hand.</li>
+                <br>
+                <li>Get into contract - once you find the house of your dreams and get into contract the LO comes back into the
+                    picture. With the purchase contract in hand your LO can now resubmit your file for final approval.</li>
+                <br>
+                <li>Clear to close- once your LO gets the final approval you receive a Closing Disclosure that outlines everything
+                    about your loan including monthly payment, fees and other loan related information. Once that is signed
+                    the 3-day waiting period begins.</li>
+                <br>
+                <li> The American Dream - once the mandatory three day waiting period has passed you can now sign the final loan
+                    documents which happens live and in person. Once the final docs are signed and your county records you
+                    will receive the keys to your new house. </li>
+            </ol>
+        </div>
+    </div>
 
     <!-- Footer -->
     <footer class="page-footer teal">
         <!-- Container for Company Bio and links -->
-        <div class="container">
-            <div class="row">
-                <div class="col l6 s12">
-                    <h5 class="white-text">Company Bio</h5>
-                    <p class="grey-text text-lighten-4"> <div class="row">
-                        <div class="col l6 s12">
-                            <h5 class="white-text">Company Bio</h5>
-                            <p class="grey-text text-lighten-4">
-                                Zach Malgieri NMLS #1311085
-                                <br>
-                                81 Blue Ravine Rd (1.77 mi)
-                                Folsom, California 95630
-                                <br>
-                                (707) 365-5343
-                            </p>
-                        </div>
-                        <div class="col l3 s12"></p>
-                </div>
-                <div class="col l3 s12">
-                    <h5 class="white-text">My Employer</h5>
+
+        <div class="row">
+            <div class="col l6 s12">
+                <h5 class="white-text">Company Bio</h5>
+                <p class="grey-text text-lighten-4">
+                    Zach Malgieri NMLS #1311085
+                    <br> 81 Blue Ravine Rd (1.77 mi) Folsom, California 95630
+                    <br> (707) 365-5343
+                </p>
+            </div>
+            <div class="col l3 s12">
+                <h5 class="white-text">My Employer</h5>
                 <ul>
                     <li>
                         <a class="white-text" href="https://mortgagesolutions.net/">Mortgage Solutions Financial</a>
@@ -94,15 +119,16 @@
                 <h5 class="white-text">Branch Locations</h5>
                 <ul>
                     <li>
-                        <a class="white-text" href="https://mortgagesolutions.net/branches-locations/">Seach near me</a>
+                        <a class="white-text" href="https://mortgagesolutions.net/branches-locations/">Search near me</a>
                     </li>
-                    </ul>
-                </div>
+                </ul>
             </div>
+
             <!-- Copyright etc. -->
             <div class="footer-copyright">
                 <div class="container">
-                    Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+                    Made by
+                    <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
                 </div>
             </div>
     </footer>
