--- a/explore.html
+++ b/explore.html
@@ -32,44 +32,41 @@
     <!-- left size Z logo -->
     <nav class="white" role="navigation">
         <div class="nav-wrapper container">
-            <a id="logo-container" href="https://jrworkflows.github.io/Project1/" class="brand-logo"><img src="https://github.com/JRworkflows/Project1/blob/master/images/logocirc.JPG?raw=true" width=60 height=60></a>
+            <a id="logo-container" href="https://jrworkflows.github.io/Project1/" class="brand-logo">
+                <img src="https://github.com/JRworkflows/Project1/blob/master/images/logocirc.JPG?raw=true" width=60 height=60>
+            </a>
             <ul class="right hide-on-med-and-down">
                 <!-- Nav Links -->
-                <li><a href="https://jrworkflows.github.io/Project1/checklist.html">Loan Checklist</a></li>
-                <li><a href="https://jrworkflows.github.io/Project1/rate.html">Contact</a></li>
-                <li><a href="https://jrworkflows.github.io/Project1/explore.html">Explore my Community</a></li>
+                <li>
+                    <a href="https://jrworkflows.github.io/Project1/checklist.html">Loan Checklist</a>
+                </li>
+                <li>
+                    <a href="https://jrworkflows.github.io/Project1/rate.html">Contact</a>
+                </li>
+                <li>
+                    <a href="https://jrworkflows.github.io/Project1/explore.html">Explore my Community</a>
+                </li>
             </ul>
 
             <ul id="nav-mobile" class="sidenav">
-                <li><a href="https://jrworkflows.github.io/Project1/checklist.html">Loan Checklist</a></li>
-                <li><a href="https://jrworkflows.github.io/Project1/rate.html">Contact</a></li>
-                <li><a href="https://jrworkflows.github.io/Project1/explore.html">Explore my Community</a></li>
+                <li>
+                    <a href="https://jrworkflows.github.io/Project1/checklist.html">Loan Checklist</a>
+                </li>
+                <li>
+                    <a href="https://jrworkflows.github.io/Project1/rate.html">Contact</a>
+                </li>
+                <li>
+                    <a href="https://jrworkflows.github.io/Project1/explore.html">Explore my Community</a>
+                </li>
             </ul>
-            <a href="index.html" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+            <a href="index.html" data-target="nav-mobile" class="sidenav-trigger">
+                <i class="material-icons">menu</i>
+            </a>
         </div>
     </nav>
-
-
-
-
-    <!-- logo banner
-        <div class="parallax"><img src="https://github.com/JRworkflows/Project1/blob/joannas_branch/assets/css/materialize/images/logo_transparent_background.png?raw=true" width=850 height=150 alt="Banner Zach Malgieri"></div>
-    </div> -->
-
-    <!-- <div class="container">
-        <div class="row">
-            <div class="col l6 s12">
-                <h5 class="white-text">Company Bio</h5>
-                <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
-
-            </div>
-        </div>
-    </div> -->
-
-    <!-- Google Map HTML -->
+    <!-- Google map div -->
     <div id="map"></div>
-
-
+    <!-- Form input -->
     <div class="contentDiv">
         <form>
             <div class="form-group">
@@ -80,40 +77,27 @@
                 <label for="formGroupExampleInput2">Or Zip Code</label>
                 <input type="text" class="form-control" id="input-zip" placeholder="e.g. 95815">
             </div>
-                <button class="btn btn-primary" type="button" id="submit-btn">Submit</button>
+            <button class="btn btn-primary" type="button" id="submit-btn">Submit</button>
             <br>
             <br>
-            
+
         </form>
     </div>
-
-
-
-
-
-
     <!-- Footer -->
     <footer class="page-footer teal">
         <!-- Container for Company Bio and links -->
-        <div class="container">
-            <div class="row">
-                <div class="col l6 s12">
-                    <h5 class="white-text">Company Bio</h5>
-                    <p class="grey-text text-lighten-4"> <div class="row">
-                        <div class="col l6 s12">
-                            <h5 class="white-text">Company Bio</h5>
-                            <p class="grey-text text-lighten-4">
-                                Zach Malgieri NMLS #1311085
-                                <br>
-                                81 Blue Ravine Rd (1.77 mi)
-                                Folsom, California 95630
-                                <br>
-                                (707) 365-5343
-                            </p>
-                        </div>
-                        <div class="col l3 s12"> </div>
-                <div class="col l3 s12">
-                    <h5 class="white-text">My Employer</h5>
+
+        <div class="row">
+            <div class="col l6 s12">
+                <h5 class="white-text">Company Bio</h5>
+                <p class="grey-text text-lighten-4">
+                    Zach Malgieri NMLS #1311085
+                    <br> 81 Blue Ravine Rd (1.77 mi) Folsom, California 95630
+                    <br> (707) 365-5343
+                </p>
+            </div>
+            <div class="col l3 s12">
+                <h5 class="white-text">My Employer</h5>
                 <ul>
                     <li>
                         <a class="white-text" href="https://mortgagesolutions.net/">Mortgage Solutions Financial</a>
@@ -126,20 +110,24 @@
                     <li>
                         <a class="white-text" href="https://mortgagesolutions.net/branches-locations/">Search near me</a>
                     </li>
-                    </ul>
-                </div>
+                </ul>
             </div>
+
             <!-- Copyright etc. -->
             <div class="footer-copyright">
                 <div class="container">
-                    Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+                    Made by
+                    <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
                 </div>
             </div>
     </footer>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em"
+        crossorigin="anonymous"></script>
     <!-- <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script> -->
 
 
@@ -157,7 +145,8 @@
             })
         }
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAJAZvpjIihMIT97NpAcmLI15XV69mgWAA&callback=initMap" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAJAZvpjIihMIT97NpAcmLI15XV69mgWAA&callback=initMap" async
+        defer></script>
     <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase.js"></script>
 
     <script src="js/app.js"></script>
